[project]
name = "patient-med-tracker"
version = "0.1.0"
description = "Fake hospital medication tracker for Bug Analyzer testing"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/medication_tracker"]

[tool.ruff]
line-length = 100
target-version = "py312"
